--- a/style.css
+++ b/style.css
@@ -7,18 +7,55 @@
 
 body {
     margin: auto;
-    width: 1120px;
     font-family: 'Poppins', sans-serif;
+     width: 1120px;
 }
+
+
 
 header{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin: 10px 0;
 }
 
 .logo svg{
     color: #ff385c;
+}
+
+.other-options{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 251px;
+}
+
+.other-options button{
+    padding: 8px;
+    background-color: transparent;
+    border: none;
+    margin: 8px;
+}
+
+.other-options button:hover{
+    border-radius: 10px;
+    background-color: rgba(211, 211, 211, 0.278);
+}
+
+.menu{
+    display: flex;
+    align-items: center;
+    border: .4px solid lightgray;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.menu svg{
+    margin-left: 7px;
+}
+.hr2{
+    width: 1200;
 }
 
 .serach{
