--- a/style.css
+++ b/style.css
@@ -465,6 +465,12 @@ hr {
 
 .calander-menu{
     margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.calander-menu svg{
+    margin-right: 10px;
 }
 
 
@@ -472,6 +478,72 @@ hr {
     font-size: 18px;
 
 }
+
+.rangedisplay{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.rangedisplay p{
+    font-weight: 200;
+}
+
+.one{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 7px;
+}
+
+.rating1{
+    border: 2.5px solid rgb(34, 34, 34,1);
+    width: 152px;
+    margin-right: 10px;
+    border-radius: 10px;
+    margin-left: 200px;
+}
+
+.comment{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.firstcomment img{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
+
+.firstcomment{
+    display: flex;
+    align-items: center;
+}
+
+.name{
+    margin-left: 10px;
+}
+
+.name p{
+    font-size: 12px;
+    margin: 0!important;
+}
+
+.date{
+    font-weight: 200;
+    margin: 0!important;
+}
+
+.comment p{
+    width: 500px;
+    font-weight: 300;
+    margin: 25px 0;
+}
+
 
 
 /* Media quries for mobile view  */
